# yihuier

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  dataprocessing.py  eda.py  main.py  pyproject.toml  readme_1.md  requirements.txt  setup.py  yihui.py
.claude/skills/: risk-modeling.skill
.claude/skills/risk-modeling/: SKILL.md
.claude/skills/risk-modeling/scripts/: risk_modeling_template.py
.github/workflows/: deploy-docs.yml  publish.yml
Code/: eda.py  main.py  yihui.py
Yihui/: __init__.py  __init__1.py  binning.py  binning1.py  binning_funciton.py  cluster.py  data_processing.py  dataprocessing.py  eda.py  test.py  var_selelct.py  yihui.py
Yihuier/: __init__.py  __init__1.py  binning.py  binning_function.py  cluster.py  constants.py  data_processing.py  eda.py  frame.py  model_evaluation.py  pipeline.py  scorecard_implement.py  scorecard_monitor.py  test.py  third_platform_data_evaluation.py  var_select.py  var_selelct.py  yihui.py  yihuier.py
docs/: .npmrc  DOCS_README.md  README.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/develop/: architecture.md  changelog.md  contributing.md  index.md
docs/guide/: advanced-examples.md  api.md  best-practices.md  examples.md  installation.md  intro.md  quick-start.md  skill.md
docs/guide/concepts/: evaluation-metrics.md  index.md  scorecard-basics.md  woe-iv.md
docs/guide/modules/: binning.md  cluster.md  data-processing.md  eda.md  index.md  model-evaluation.md  pipeline.md  scorecard-implement.md  scorecard-monitor.md  var-select.md
examples/: advanced_pipeline.py  basic_usage.py
scripts/: publish.sh  test_install.sh
tests/: conftest.py  test_binning.py  test_data_processing.py  test_eda.py  test_integration.py  test_model_evaluation.py  test_scorecard_implement.py  test_var_select.py
yihuier/: binning.py  cluster.py  eda.py  scorecard_monitor.py
