[project]
name = "yihuier"
version = "0.1.0"
description = "评分卡模型实现函数模块 - 轻松解决逻辑回归建模"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Justin Gao" }
]
keywords = ["scorecard", "logistic-regression", "credit-scoring", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "matplotlib>=3.8.2",
    "pandas>=2.1.4",
    "seaborn>=0.12.2",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "tqdm>=4.66.1",
    "xgboost>=2.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

profiling = [
    "ydata-profiling>=4.6.0",
]

all = [
    "yihuier[dev,profiling]",
]

[project.urls]
Homepage = "https://github.com/encyc/yihuier"
Repository = "https://github.com/encyc/yihuier"
Documentation = "https://github.com/encyc/yihuier/blob/main/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
